# prpr

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  custom_build.sh  project.yml  rustfmt.toml
.cargo/: config.toml
prpr/: Cargo.toml
prpr-android/: Cargo.toml
prpr-android/src/: lib.rs
prpr-client/: Cargo.toml
prpr-client-main/: Cargo.toml
prpr-client-main/src/: main.rs
prpr-client/locales/en-US/: about.ftl  home.ftl  online.ftl  profile.ftl  settings.ftl  song.ftl
prpr-client/locales/zh-CN/: about.ftl  home.ftl  main_scene.ftl  online.ftl  profile.ftl  settings.ftl  song.ftl
prpr-client/src/: billboard.rs  chart_order.rs  cloud.rs  data.rs  images.rs  lib.rs  login.rs  page.rs  phizone.rs  popup.rs  scene.rs  task.rs
prpr-client/src/cloud/: file.rs  images.rs  structs.rs  user.rs
prpr-client/src/page/: about.rs  account.rs  home.rs  library.rs  local.rs  message.rs  offset.rs  online.rs  remote.rs  settings.rs
prpr-client/src/phizone/: object.rs  objects.rs
prpr-client/src/phizone/object/: chart.rs  record.rs  song.rs  user.rs
prpr-client/src/scene/: chart_order.rs  main.rs  profile.rs  song.rs  upload_info.txt
prpr-player/: Cargo.toml
prpr-player/src/: main.rs
prpr-render/: Cargo.toml
prpr-render/src/: main.rs  scene.rs
prpr/src/: audio.rs  config.rs  core.rs  ext.rs  fs.rs  info.rs  judge.rs  l10n.rs  lib.rs  objc.rs  parse.rs  particle.rs  scene.rs  task.rs  time.rs  tips.txt  ui.rs
prpr/src/audio/: kira.rs  web.rs
prpr/src/core/: anim.rs  chart.rs  effect.rs  line.rs  note.rs  object.rs  render.rs  resource.rs  tween.rs  video.rs
prpr/src/core/shaders/: chromatic.glsl  circle_blur.glsl  glitch.glsl  noise.glsl  pixel.glsl  radial_blur.glsl  shockwave.glsl
prpr/src/parse/: extra.rs  pec.rs  pgr.rs  rpe.rs
prpr/src/scene/: ending.rs  game.rs  loading.rs
prpr/src/ui/: billboard.rs  chart_info.rs  dialog.rs  scroll.rs  shadow.rs  text.rs
src/: audio.rs  config.rs  core.rs  ext.rs  judge.rs  lib.rs  main.rs  parse.rs  particle.rs
src/audio/: kira.rs  web.rs
src/core/: anim.rs  chart.rs  line.rs  note.rs  object.rs  resource.rs  tween.rs
src/parse/: pec.rs  pgr.rs  rpe.rs
