[package]
name = "prpr-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0"
base64 = "0.20"
chrono = { version = "0.4.23", features = ["serde"] }
image = "*"
lyon = "*"
macroquad = { version = "*", default-features = false }
# macroquad = { path = "../../macroquad", default-features = false }
md5 = "0.7"
once_cell = "*"
openssl = { version = "*", features = ["vendored"] }
pollster = "0.2.5"
prpr = { path = "../prpr" }
regex = "1.7.0"
reqwest = "0.11"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tempfile = "3.3"
tokio = "*"
# tokio = { version = "*", features = ["rt-multi-thread"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.2"
ndk-context = "0.1"
