[package]
name = "prpr-client"
version = "0.1.18"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0"
base64 = "0.20"
futures-util = "0.3.25"
image = "*"
lyon = "*"
macroquad = { git = "https://github.com/Mivik/prpr-macroquad", default-features = false }
md5 = "0.7"
once_cell = "*"
openssl = { version = "*", features = ["vendored"] }
pollster = "0.2.5"
prpr = { path = "../prpr" }
regex = "1.7.0"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tempfile = "3.3"
tokio = { version = "*", features = ["rt-multi-thread", "sync"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.2"
ndk-context = "0.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "*"
objc-foundation = "*"
