[package]
name = "prpr-player"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
macroquad = { git = "https://github.com/Mivik/prpr-macroquad", default-features = false }
prpr = { path = "../prpr" }
image = "*"
fastblur = "*"
serde_yaml = "0.9"
tokio = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "*"
wasm-bindgen = "*"
