[package]
name = "prpr-player"
version = "0.3.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
fastblur = "*"
image = "*"
macroquad = { git = "https://github.com/Mivik/prpr-macroquad", default-features = false }
prpr = { path = "../prpr" }
serde_yaml = "0.9"
tokio = { version = "1.26", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "*"
wasm-bindgen = "*"
