[package]
name = "prpr-render"
version = "0.1.21"
edition = "2021"

[dependencies]
anyhow = "1.0"
macroquad = { git = "https://github.com/Mivik/prpr-macroquad", default-features = false }
prpr = { path = "../prpr" }
# kira = { git = "https://github.com/Mivik/prpr-kira" }
serde_yaml = "0.9"
tokio = "*"
