[package]
name = "prpr"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
cfg-if = "1.0.0"
chardetng = "0.1.17"
chrono = "0.4.23"
concat-string = "1.0.1"
csv = "1.1.6"
fastblur = "0.1.1"
glyph_brush = "0.7.5"
image = "0.24"
lyon = "1.0.1"
macroquad = { git = "https://github.com/Mivik/prpr-macroquad", default-features = false }
miniquad = { git = "https://github.com/Mivik/prpr-miniquad" }
nalgebra = "*"
once_cell = "1.16.0"
ordered-float = "3.4.0"
phf = { version = "0.11.1", features = ["macros"] }
rayon = "=1.6.0"
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
symphonia = { version = "0.5", features = ["flac", "mp3", "ogg", "vorbis", "wav", "pcm"] }
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
rfd = "0.10"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "*"
objc-foundation = "0.1.1"
objc_id = "*"
block = "0.1.6"

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"
sasa = { git = "https://github.com/Mivik/sasa", default-features = false, features = ["oboe"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
sasa = { git = "https://github.com/Mivik/sasa" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.23", features = ["rt-multi-thread", "fs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = "1.23"
web-sys = { version = "0.3", features = [
	"Location",
	"Performance",
	"UrlSearchParams",
	"Window",
] }
js-sys = "*"
wasm-bindgen = "*"
wasm-bindgen-futures = "0.4"
